# ProtectVariable

./: CMakeLists.txt  ProtectedVariable.cpp  README.md
